DirectSlice.java: newZeroCopyDirectBuffer prefer MethodHandle for speed